# simple-llvmjit

./: CMakeLists.txt  Make-Command.txt  main.cpp
include/: jit.h
